# python-advanced

./: .gitignore  README.md  main.py  pyproject.toml
src/db/: model.py
