[tool.poetry]
name = "python-advanced-cert"
version = "0.1.0"
description = ""
authors = ["Joris <mathijsen.joris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
click = "^8.1.7"
pyarrow = "^17.0.0"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
